--- a/source/pic18x/run_pic18x_compiler_tests/run_pic18x_compiler_tests.lpi
+++ b/source/pic18x/run_pic18x_compiler_tests/run_pic18x_compiler_tests.lpi
@@ -14,10 +14,10 @@
       <Title Value="run_pic18x_compiler_tests"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
-      <Icon Value="0"/>
-      <Resources Count="2">
+      <Resources Count="3">
         <Resource_0 FileName="..\..\common\cp_logo.bmp" Type="BITMAP" ResourceName="CP_LOGO"/>
         <Resource_1 FileName="..\..\common\lazarus_logo.bmp" Type="BITMAP" ResourceName="LAZARUS_LOGO"/>
+        <Resource_2 FileName="..\..\common\mainicon.ico" Type="ICON" ResourceName="MAINICON"/>
       </Resources>
     </General>
     <i18n>
