--- a/source/cpc_core/cpc_core_dev/cpc_core_dev.lpi
+++ b/source/cpc_core/cpc_core_dev/cpc_core_dev.lpi
@@ -13,10 +13,10 @@
       <MainUnit Value="0"/>
       <Title Value="cpc_core_dev"/>
       <UseAppBundle Value="False"/>
-      <Icon Value="0"/>
-      <Resources Count="2">
+      <Resources Count="3">
         <Resource_0 FileName="..\..\common\cp_logo.bmp" Type="BITMAP" ResourceName="CP_LOGO"/>
         <Resource_1 FileName="..\..\common\lazarus_logo.bmp" Type="BITMAP" ResourceName="LAZARUS_LOGO"/>
+        <Resource_2 FileName="..\..\common\mainicon.ico" Type="ICON" ResourceName="MAINICON"/>
       </Resources>
     </General>
     <i18n>
