--- a/source/pic18x/include_file_generator/pic18x_include_file_generator.dproj
+++ b/source/pic18x/include_file_generator/pic18x_include_file_generator.dproj
@@ -167,9 +167,8 @@
 		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
 		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
 		<PropertyGroup>
-			<PreBuildEvent><![CDATA[del pic18x_include_file_generator.res]]></PreBuildEvent>
-			<PostBuildEvent><![CDATA[resourcehacker.exe -script resourcehacker_script.txt
-del pic18x_include_file_generator.res]]></PostBuildEvent>
+			<PreBuildEvent><![CDATA[copy res\*.* .]]></PreBuildEvent>
+			<PostBuildEvent><![CDATA[resourcehacker.exe -script resourcehacker_script.txt]]></PostBuildEvent>
 		</PropertyGroup>
 		<ProjectExtensions>
 			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
