--- a/source/pic18x/cpc_pic18x_dev/cpc_pic18x_dev.dproj
+++ b/source/pic18x/cpc_pic18x_dev/cpc_pic18x_dev.dproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{30dd8f5b-c99a-46ea-8af1-347980a0d0e8}</ProjectGuid>
@@ -92,7 +92,9 @@
     <DCCReference Include="..\test_pic18x_compiler_unit.pas" />
     <DCCReference Include="..\test_pic18x_kernel_unit.pas" />
     <DCCReference Include="..\test_pic18x_simulator_unit.pas" />
-    <DCCReference Include="..\test_pic18x_subroutines_unit.pas" />
+    <DCCReference Include="..\test_pic18x_subroutines_unit.pas">
+      <Form>$R *.res</Form>
+    </DCCReference>
     <DCCReference Include="main_form_unit.pas">
       <Form>MainForm</Form>
     </DCCReference>
