--- a/source/pic18x/run_pic18x_kernel_tests/run_pic18x_kernel_tests.dproj
+++ b/source/pic18x/run_pic18x_kernel_tests/run_pic18x_kernel_tests.dproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{4454a265-8865-4f39-990d-1d3ae4231444}</ProjectGuid>
@@ -57,6 +57,7 @@ del run_pic18x_kernel_tests.res</PostBuildEvent>
     <DCCReference Include="..\..\cpc_core\cpc_expressions_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_main_compiler_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_multi_precision_integer_unit.pas" />
+    <DCCReference Include="..\..\cpc_core\cpc_reserved_words_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_simple_expression_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_source_analysis_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_statements_unit.pas" />
