--- a/source/pic18x/run_pic18x_simulator_tests/run_pic18x_simulator_tests.dproj
+++ b/source/pic18x/run_pic18x_simulator_tests/run_pic18x_simulator_tests.dproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{b9cb4a12-7237-4f6a-b666-452260053a41}</ProjectGuid>
@@ -63,9 +63,6 @@ del run_pic18x_simulator_tests.res</PostBuildEvent>
     <DCCReference Include="..\..\cpc_core\cpc_target_cpu_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_term_expression_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_types_unit.pas" />
-    <DCCReference Include="..\common\pic18x_aboutbox_unit.pas">
-      <Form>PIC18xAboutBoxForm</Form>
-    </DCCReference>
     <DCCReference Include="..\pic18x_access_unit.pas" />
     <DCCReference Include="..\pic18x_assignment_statement_unit.pas" />
     <DCCReference Include="..\pic18x_blocks_unit.pas" />
