added $IFDEF MSWINDOWS for task bar call

--- a/source/pic18x/cpc_pic18x_dev/cpc_pic18x_dev.lpi
+++ b/source/pic18x/cpc_pic18x_dev/cpc_pic18x_dev.lpi
@@ -276,7 +276,12 @@
       </Options>
     </Linking>
     <Other>
-      <CustomOptions Value="-dBorland -dVer150 -dDelphi7 -dCompiler6_Up -dPUREPASCAL"/>
+      <CustomOptions Value="-al
+-dBorland
+-dVer150
+-dDelphi7
+-dCompiler6_Up
+-dPUREPASCAL"/>
     </Other>
   </CompilerOptions>
   <Debugging>
