--- a/source/cpc_core/cpc_core_dev/cpc_core_dev.dproj
+++ b/source/cpc_core/cpc_core_dev/cpc_core_dev.dproj
@@ -49,6 +49,7 @@
     <DCCReference Include="..\..\common\aboutbox_unit.pas">
       <Form>AboutBoxForm</Form>
     </DCCReference>
+    <DCCReference Include="..\..\common\test_temp_directory_unit.pas" />
     <DCCReference Include="..\cpc_access_unit.pas" />
     <DCCReference Include="..\cpc_blocks_unit.pas" />
     <DCCReference Include="..\cpc_common_unit.pas" />
