--- a/source/pic18x/cpc_pic18x_dev/cpc_pic18x_dev.dproj
+++ b/source/pic18x/cpc_pic18x_dev/cpc_pic18x_dev.dproj
@@ -49,6 +49,7 @@
     <DCCReference Include="..\..\common\aboutbox_unit.pas">
       <Form>AboutBoxForm</Form>
     </DCCReference>
+    <DCCReference Include="..\..\common\test_temp_directory_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_access_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_blocks_unit.pas" />
     <DCCReference Include="..\..\cpc_core\cpc_common_unit.pas" />
