--- a/source/pic18x/cpc_pic18x/cpc_pic18x.dproj
+++ b/source/pic18x/cpc_pic18x/cpc_pic18x.dproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{6ad82fe0-9e5d-45b2-9bf8-92ef992d6197}</ProjectGuid>
@@ -24,10 +24,10 @@
     <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
     <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
     <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
-    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common</DCC_UnitSearchPath>
-    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common</DCC_ResourcePath>
-    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common</DCC_ObjPath>
-    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common</DCC_IncludePath>
+    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_UnitSearchPath>
+    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_ResourcePath>
+    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_ObjPath>
+    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_IncludePath>
     <DCC_ConsoleTarget>True</DCC_ConsoleTarget>
   </PropertyGroup>
   <ProjectExtensions>
